--- a/games.yaml
+++ b/games.yaml
@@ -758,6 +758,11 @@
   wikipedia: https://en.wikipedia.org/wiki/Legend_of_the_Red_Dragon
   play: telnet darkrealms.ca
 
+- name: LeTrain
+  url: https://github.com/antoniovazquezaraujo/LeTrain
+  info: An ascii railroad simulator in Java
+  screencast: https://asciinema.org/a/8E4ZEyw26SgdgGZoCrxS2CW2J
+  
 - name: lights
   url: https://github.com/nanochess/lights
   info: is a boot sector game.
